--- a/app/src/main/res/layout/drawer_menu.xml
+++ b/app/src/main/res/layout/drawer_menu.xml
@@ -6,11 +6,11 @@
             android:icon="@drawable/ic_baseline_home_24"
             android:title="@string/home">
         </item>
-        <item android:id="@+id/nav_drawer1"
+        <item android:id="@+id/page_doctors"
             android:icon="@drawable/ic_baseline_smartphone_24"
             android:title="@string/doctors_page_title">
         </item>
-        <item android:id="@+id/nav_drawer2"
+        <item android:id="@+id/page_specialities"
             android:icon="@drawable/ic_baseline_smartphone_24"
             android:title="@string/specialities_page_title">
         </item>
