feat: adicionado navegação da home/especialidade para adicionar uma nova especialidade

--- a/app/src/main/res/layouts/doctors/layout/activity_doctors.xml
+++ b/app/src/main/res/layouts/doctors/layout/activity_doctors.xml
@@ -33,7 +33,9 @@
                 android:id="@+id/fragmentContainerView"
                 android:name="com.meicansoftware.consultamedica.pages.doctors.fragments.doctors"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                app:navGraph="@navigation/nav_doctors"
+                />
 
 
             <!--    Your code here -->
