--- a/app/src/main/res/layouts/doctors/layout/fragment_doctors.xml
+++ b/app/src/main/res/layouts/doctors/layout/fragment_doctors.xml
@@ -3,4 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/btn_new_speciality"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Adicionar novo médico" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
