--- a/app/src/main/res/layouts/specialities/layout/activity_specialities.xml
+++ b/app/src/main/res/layouts/specialities/layout/activity_specialities.xml
@@ -30,10 +30,12 @@
                 app:titleTextColor="#111111" />
 
             <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/fragmentContainerView2"
-                android:name="com.meicansoftware.consultamedica.pages.specialities.fragments.specialities"
+                android:id="@+id/fragmentContainerView4"
+                android:name="androidx.navigation.fragment.NavHostFragment"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent"
+                app:defaultNavHost="true"
+                app:navGraph="@navigation/nav_specialities" />
 
 
             <!--    Your code here -->
