--- a/app/src/main/res/layouts/specialities/layout/fragment_specialities.xml
+++ b/app/src/main/res/layouts/specialities/layout/fragment_specialities.xml
@@ -3,9 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/btn_new_speciality"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Adicionar nova especialidade" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
