--- a/app/src/main/res/layouts/specialities/layout/fragment_specialities.xml
+++ b/app/src/main/res/layouts/specialities/layout/fragment_specialities.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,11 +9,17 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <GridView
+            android:id="@+id/gridview_specialities"
+            android:layout_width="match_parent"
+            android:layout_height="500dp" />
+
         <Button
             android:id="@+id/btn_new_speciality"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="Adicionar nova especialidade" />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
