feat: adicionado inserção de médicos

--- a/app/src/main/res/layouts/specialities/layout/fragment_specialities.xml
+++ b/app/src/main/res/layouts/specialities/layout/fragment_specialities.xml
@@ -15,7 +15,7 @@
             android:layout_height="500dp" />
 
         <Button
-            android:id="@+id/btn_new_speciality"
+            android:id="@+id/btn_new_doctor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
