--- a/app/src/main/res/layouts/doctors/layout/activity_doctors.xml
+++ b/app/src/main/res/layouts/doctors/layout/activity_doctors.xml
@@ -30,12 +30,12 @@
                 app:titleTextColor="#111111" />
 
             <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/fragmentContainerView"
-                android:name="com.meicansoftware.consultamedica.pages.doctors.fragments.doctors"
+                android:id="@+id/fragmentContainerView2"
+                android:name="androidx.navigation.fragment.NavHostFragment"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:navGraph="@navigation/nav_doctors"
-                />
+                android:layout_height="match_parent"
+                app:defaultNavHost="true"
+                app:navGraph="@navigation/nav_doctors" />
 
 
             <!--    Your code here -->
