--- a/app/src/main/res/layouts/doctors/layout/fragment_doctors.xml
+++ b/app/src/main/res/layouts/doctors/layout/fragment_doctors.xml
@@ -9,7 +9,7 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/btn_new_speciality"
+            android:id="@+id/btn_new_doctor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
