feat: adicionado spinner e redict para o doctors fragment

--- a/app/src/main/res/layouts/doctors/layout/fragment_add_doctors.xml
+++ b/app/src/main/res/layouts/doctors/layout/fragment_add_doctors.xml
@@ -65,7 +65,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp" />
+
         </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_weight="0"
+            android:text="Selecione a especialidade" />
 
         <Spinner
             android:id="@+id/spinner_specialities"
