--- a/app/src/main/res/layouts/doctors/layout/fragment_doctors.xml
+++ b/app/src/main/res/layouts/doctors/layout/fragment_doctors.xml
@@ -8,6 +8,11 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <GridView
+            android:id="@+id/gridview_doctors"
+            android:layout_width="match_parent"
+            android:layout_height="500dp" />
+
         <Button
             android:id="@+id/btn_new_doctor"
             android:layout_width="wrap_content"
