--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -1,29 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/ThemeOverlay.AppCompat.Dark"
     android:layout_width="350dp"
-    android:layout_height="200dp"
-    android:background="@color/unimed_primary"
+    android:layout_height="130dp"
+    android:background="@color/white"
     android:orientation="vertical"
     android:paddingLeft="30dp"
     android:paddingTop="45dp"
     android:paddingRight="15dp">
 
-    <TextView
-        android:id="@+id/app_name_header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/app_name"
-        android:textColor="#FFFFFF"
-        android:textSize="34sp" />
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="337dp"
+        android:layout_height="72dp"
+        android:layout_marginLeft="10dp"
+        app:srcCompat="@drawable/logo_unimed_svg" />
 
-    <TextView
-        android:id="@+id/textView3"
+    <View
+        android:id="@+id/divider"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/app_description"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp" />
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
+        android:background="?android:attr/listDivider" />
 </LinearLayout>
