--- a/app/src/main/res/layouts/specialities/layout/gridview_layout_specialities.xml
+++ b/app/src/main/res/layouts/specialities/layout/gridview_layout_specialities.xml
@@ -1,26 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<androidx.gridlayout.widget.GridLayout
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:columnCount="2"
+    app:rowCount="2">
+
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="160dp"
+        android:layout_height="190dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="10dp"
         android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="150dp"
+            android:layout_height="160dp"
+            app:srcCompat="@drawable/image_doctor" />
 
         <TextView
             android:id="@+id/txt_des_speciality"
-            android:layout_width="150dp"
-            android:layout_height="70dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"
-            android:background="#800080"
-            android:gravity="center_horizontal|center_vertical"
-            android:text="descricao"
-            android:textColor="#FFFFFF"
-            android:textSize="24sp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15sp"
+            android:fontFamily="sans-serif-medium"
+            android:text="txt_des_speciality"
+            android:textColor="@color/unimed_primary"
+            android:textSize="18dp" />
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.gridlayout.widget.GridLayout>
