--- a/app/src/main/res/layout/drawer_menu.xml
+++ b/app/src/main/res/layout/drawer_menu.xml
@@ -4,6 +4,10 @@
         android:id="@+id/group1">
         <item android:id="@+id/nav_login"
             android:icon="@drawable/ic_baseline_home_24"
+            android:title="Login">
+        </item>
+        <item android:id="@+id/nav_home"
+            android:icon="@drawable/ic_baseline_home_24"
             android:title="@string/home">
         </item>
         </group>
