--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -12,10 +12,10 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="337dp"
-        android:layout_height="72dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        app:srcCompat="@drawable/logo_unimed_svg" />
+        app:srcCompat="@drawable/ufms_" />
 
     <View
         android:id="@+id/divider"
