--- a/app/src/main/res/navigation/nav_home.xml
+++ b/app/src/main/res/navigation/nav_home.xml
@@ -7,6 +7,6 @@
 
     <fragment
         android:id="@+id/page_home"
-        android:name="com.meicansoftware.gerenciasala.pages.login.fragments.login"
-        android:label="login"/>
+        android:name="com.meicansoftware.gerenciasala.pages.home.fragments.home"
+        android:label="home" />
 </navigation>
