--- a/app/src/main/res/layout/drawer_menu.xml
+++ b/app/src/main/res/layout/drawer_menu.xml
@@ -3,12 +3,24 @@
     <group android:checkableBehavior="single"
         android:id="@+id/group1">
         <item android:id="@+id/nav_login"
-            android:icon="@drawable/ic_baseline_home_24"
+            android:icon="@drawable/ic_baseline_login_24"
             android:title="Login">
         </item>
         <item android:id="@+id/nav_home"
             android:icon="@drawable/ic_baseline_home_24"
             android:title="@string/home">
+        </item>
+        <item android:id="@+id/nav_home"
+            android:icon="@drawable/ic_baseline_schedule_24"
+            android:title="Disciplinas">
+        </item>
+        <item android:id="@+id/nav_home"
+            android:icon="@drawable/ic_baseline_event_24"
+            android:title="Eventos">
+        </item>
+        <item android:id="@+id/nav_home"
+            android:icon="@drawable/ic_baseline_event_available_24"
+            android:title="Reservas">
         </item>
         </group>
 
