--- a/app/src/main/res/layouts/login/layout/fragment_signup.xml
+++ b/app/src/main/res/layouts/login/layout/fragment_signup.xml
@@ -1,33 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginLeft="30dp"
-    android:layout_marginTop="30dp"
-    android:layout_marginRight="30dp">
-
-    <LinearLayout
-        android:id="@+id/page_signup"
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:background="@drawable/background">
 
-        <TextView
-            android:id="@+id/titulo_pagina"
-            android:layout_width="match_parent"
+    <View
+            android:id="@+id/registrationContainerComponents"
+            style="@style/RegistrationContainerComponents"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="201dp"
+            android:layout_marginBottom="201dp"/>
+
+    <EditText
+            android:id="@+id/edt_first_name"
+            style="@style/LoginEditText"
+            android:hint="Nome"
+            app:layout_constraintStart_toStartOf="@id/registrationContainerComponents"
+            app:layout_constraintEnd_toEndOf="@id/registrationContainerComponents"
+            app:layout_constraintTop_toTopOf="@id/registrationContainerComponents"
+    />
+
+    <EditText
+            android:id="@+id/edt_sir_name"
+            style="@style/LoginEditText"
+            android:hint="Último Sobrenome"
+            app:layout_constraintStart_toStartOf="@id/registrationContainerComponents"
+            app:layout_constraintEnd_toEndOf="@id/registrationContainerComponents"
+            app:layout_constraintTop_toBottomOf="@id/edt_first_name"
+    />
+
+    <EditText
+            android:id="@+id/edt_email"
+            style="@style/LoginEditText"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            app:layout_constraintStart_toStartOf="@id/registrationContainerComponents"
+            app:layout_constraintEnd_toEndOf="@id/registrationContainerComponents"
+            app:layout_constraintTop_toBottomOf="@id/edt_sir_name"
+    />
+
+    <EditText
+            android:id="@+id/edt_password"
+            style="@style/LoginEditText"
+            android:hint="Senha"
+            android:inputType="textPassword"
+            app:layout_constraintStart_toStartOf="@id/registrationContainerComponents"
+            app:layout_constraintEnd_toEndOf="@id/registrationContainerComponents"
+            app:layout_constraintTop_toBottomOf="@id/edt_email"
+    />
+
+    <EditText
+            android:id="@+id/edt_capacity"
+            style="@style/LoginEditText"
+            android:hint="Locação"
+            app:layout_constraintStart_toStartOf="@id/registrationContainerComponents"
+            app:layout_constraintEnd_toEndOf="@id/registrationContainerComponents"
+            app:layout_constraintTop_toBottomOf="@id/edt_password"
+    />
+
+    <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_add_user"
+            style="@style/LoginButton"
+            android:text="@string/cadastrar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/edt_capacity"
+            android:layout_marginTop="64dp"/>
+    <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Médicos"
-            android:textSize="24sp" />
+            android:layout_marginTop="20dp"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/registrationContainerComponents"
+    />
 
-
-        <Button
-            android:id="@+id/btn_signup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="#A52929"
-            android:text="Cadastrar" />
-
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
