--- a/app/src/main/res/layout/fragment_get_room_detailed.xml
+++ b/app/src/main/res/layout/fragment_get_room_detailed.xml
@@ -16,34 +16,34 @@
             android:id="@+id/txt_id_sala"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingBottom="15dp"
             android:text="Visualizando a sala: " />
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
             android:src="@drawable/sala_de_aula_ufms" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/txt_nm_sala"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="36dp" />
+
+        <TextView
+            android:id="@+id/txt_observacao"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/txt_lotacao"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/textView4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/txt_agendavel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView" />
@@ -51,29 +51,24 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="center_horizontal"
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/btn_delete_room"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:maxWidth="50dp"
-                android:text="Button" />
+                android:layout_weight="0"
+                android:backgroundTint="@android:color/holo_red_light"
+                android:text="Deletar" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/btn_update_room"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Button" />
-
-            <Button
-                android:id="@+id/button4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Button" />
+                android:layout_marginLeft="10dp"
+                android:layout_weight="0"
+                android:text="Atualizar" />
 
         </LinearLayout>
     </LinearLayout>
