--- a/app/src/main/res/layout/fragment_get_room_detailed.xml
+++ b/app/src/main/res/layout/fragment_get_room_detailed.xml
@@ -12,17 +12,32 @@
         android:orientation="vertical"
         android:padding="30dp">
 
-        <TextView
-            android:id="@+id/txt_id_sala"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="15dp"
-            android:text="Visualizando a sala: " />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/btn_back_room"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_arrow_back_24" />
+
+            <TextView
+                android:id="@+id/txt_id_sala"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="15dp"
+                android:text="Visualizando a sala: " />
+
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="wrap_content"
             android:layout_height="200dp"
+            android:clickable="true"
+            android:focusable="true"
             android:src="@drawable/sala_de_aula_ufms" />
 
         <TextView
