--- a/app/src/main/res/layouts/homepage/layout/fragment_homepage.xml
+++ b/app/src/main/res/layouts/homepage/layout/fragment_homepage.xml
@@ -7,7 +7,9 @@
 
     <androidx.gridlayout.widget.GridLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="1200dp"
+        android:background="#0088B7"
+        android:backgroundTintMode="src_in"
         tools:layout_editor_absoluteX="200dp"
         tools:layout_editor_absoluteY="-356dp">
 
@@ -15,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
+            android:background="#00FFFFFF"
             android:orientation="vertical">
 
             <LinearLayout
@@ -29,7 +32,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-black"
                     android:text="Maycon"
-                    android:textColor="@color/unimed_primary"
+                    android:textColor="@color/white"
                     android:textSize="24dp" />
 
                 <TextView
@@ -37,7 +40,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Saudações!"
-                    android:textColor="@color/unimed_primary"
+                    android:textColor="@color/white"
                     android:textSize="16dp" />
             </LinearLayout>
 
@@ -62,15 +65,16 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
-                    android:backgroundTint="@color/unimed_primary"
+                    android:backgroundTint="@color/white"
                     android:ems="10"
                     android:hint="Buscar por salas"
                     android:inputType="textPersonName"
                     android:padding="10dp"
                     android:shadowColor="#BF5959"
-                    android:textColor="@color/unimed_primary"
+                    android:textColor="@color/white"
                     android:textColorHighlight="#E62A2A"
-                    android:textColorHint="@color/unimed_primary" />
+                    android:textColorHint="@color/white"
+                    android:textColorLink="#FFFFFF" />
 
                 <Button
                     android:id="@+id/button"
@@ -79,7 +83,9 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="2"
+                    android:backgroundTint="@color/white"
                     android:text="Filtrar"
+                    android:textColor="#0088B7"
                     android:textSize="9sp" />
 
             </LinearLayout>
@@ -89,15 +95,32 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/text_name_user2"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:fontFamily="sans-serif-black"
-                    android:text="Salas"
-                    android:textColor="@color/unimed_primary"
-                    android:textSize="24dp" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/text_name_user2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:layout_marginLeft="20dp"
+                        android:fontFamily="sans-serif-black"
+                        android:text="Salas"
+                        android:textColor="@color/white"
+                        android:textSize="24dp" />
+
+                    <Button
+                        android:id="@+id/btn_home_novasala"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="185dp"
+                        android:backgroundTint="@color/white"
+                        android:text="Nova sala"
+                        android:textColor="#0088B7"
+                        android:textSize="12sp" />
+                </LinearLayout>
 
                 <GridView
                     android:id="@+id/gridview_home_rooms"
@@ -107,7 +130,7 @@
                     android:layout_weight="1"
                     android:numColumns="auto_fit"
                     android:scrollbarAlwaysDrawHorizontalTrack="true"
-                    android:scrollbars="horizontal" >
+                    android:scrollbars="horizontal">
 
                 </GridView>
 
