--- a/app/src/main/res/layouts/login/layout/fragment_login.xml
+++ b/app/src/main/res/layouts/login/layout/fragment_login.xml
@@ -1,69 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/background">
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="600dp"
-        android:background="@drawable/background">
+        android:layout_height="780dp"
+        android:orientation="vertical">
 
-    <TextView
-            style="@style/LoginText"
-            android:text="@string/login"
-            android:layout_marginStart="40dp"
-            app:layout_constraintBottom_toTopOf="@id/LogincontainerComponents"
-            app:layout_constraintStart_toStartOf="parent"/>
+        <ImageView
+            android:id="@+id/imageView8"
+            android:layout_width="308dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|center_vertical"
+            android:layout_marginTop="49dp"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/logo_ufms_branco" />
 
-    <View
-            android:id="@+id/LogincontainerComponents"
-            style="@style/LoginContainerComponents"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="240dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="451dp"
-    />
-
-    <EditText
-            android:id="@+id/edt_email_login"
-            style="@style/LoginEditText"
-            android:hint="Email"
-            android:drawableRight="@drawable/ic_email"
-            android:inputType="textEmailAddress"
-            app:layout_constraintStart_toStartOf="@id/LogincontainerComponents"
-            app:layout_constraintEnd_toEndOf="@id/LogincontainerComponents"
-            app:layout_constraintTop_toTopOf="@id/LogincontainerComponents"
-    />
-
-    <EditText
-            android:id="@+id/edt_password_login"
-            style="@style/LoginEditText"
-            android:hint="Senha"
-            android:drawableRight="@drawable/ic_key"
-            android:inputType="textPassword"
-            app:layout_constraintStart_toStartOf="@id/LogincontainerComponents"
-            app:layout_constraintEnd_toEndOf="@id/LogincontainerComponents"
-            app:layout_constraintTop_toBottomOf="@id/edt_email_login"
-    />
-
-    <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_login"
-            style="@style/LoginButton"
-            android:text="@string/entrar"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/edt_password_login"
-    />
-
-    <ProgressBar
-            android:id="@+id/progressBar_login"
+        <TextView
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:visibility="invisible"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/LogincontainerComponents"
-    />
+            android:layout_gravity="center|center_vertical"
+            android:fontFamily="sans-serif-black"
+            android:text="Agendamento de sala"
+            android:textColor="@color/white"
+            android:textSize="28dp"
+            app:layout_constraintBottom_toTopOf="@+id/LogincontainerComponents"
+            app:layout_constraintTop_toBottomOf="@+id/imageView8" />
+
+        <View
+            android:id="@+id/LogincontainerComponents"
+            style="@style/LoginContainerComponents"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="#00FFFFFF" />
+
+        <EditText
+            android:id="@+id/edt_email_login"
+            style="@style/LoginEditText"
+            android:drawableRight="@drawable/ic_email"
+            android:hint="Email"
+            android:inputType="textEmailAddress" />
+
+        <EditText
+            android:id="@+id/edt_password_login"
+            style="@style/LoginEditText"
+            android:drawableRight="@drawable/ic_key"
+            android:hint="Senha"
+            android:inputType="textPassword" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_login"
+            style="@style/LoginButton"
+            android:text="@string/entrar" />
+    </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        tools:layout_editor_absoluteX="182dp"
+        tools:layout_editor_absoluteY="511dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
